...
      );
    default:
      return "primary";
  }
};

export const Jobs = () => {
  const { user, loading } = useAuth();
  const { shopId } = useParams();
  const { shop, userShop } = useShop(shopId);
  const {
    jobs,
    loading: jobsLoading,
...
    >
      <Util.Row style={{ justifyContent: "space-between" }}>
        <div>
          <H1>Jobs</H1>
          <H3>{shop.name}</H3>
        </div>
        <Button onClick={createJob}>Create Job</Button>
      </Util.Row>
      {jobs.length === 0 ? (
        <i>
          No jobs found. Click the "Create Job" button above to create a new
          job.
        </i>
...
